home page creation

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -6,7 +6,11 @@
   "webDir": "build",
   "plugins": {
     "SplashScreen": {
-      "launchShowDuration": 0
+      "launchShowDuration": 3000,
+      "launchAutoHide": true,
+      "androidScaleType": "CENTER_CROP",
+      "splashImmersive": true,
+      "backgroundColor": "#ffffff"
     }
   },
   "cordova": {}
