--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,13 +1,17 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "ionic-ecommerce-example",
-  "bundledWebRuntime": false,
-  "npmClient": "npm",
-  "webDir": "build",
-  "plugins": {
-    "SplashScreen": {
-      "launchShowDuration": 0
-    }
-  },
-  "cordova": {}
+	"appId": "io.ionic.starter",
+	"appName": "ionic-ecommerce-example",
+	"bundledWebRuntime": false,
+	"npmClient": "npm",
+	"webDir": "build",
+	"plugins": {
+		"SplashScreen": {
+			"launchShowDuration": 3000,
+			"launchAutoHide": true,
+			"androidScaleType": "CENTER_CROP",
+			"splashImmersive": true,
+			"backgroundColor": "#ffffff"
+		}
+	},
+	"cordova": {}
 }
