--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@capacitor/cli": "^5.3.0",
     "@capacitor/core": "^5.3.0",
     "@capacitor/ios": "^4.8.1",
+    "@capacitor/splash-screen": "^5.0.6",
     "@ionic/react": "^6.2.4",
     "@ionic/react-router": "^6.2.4",
     "animate.css": "^4.1.1",
@@ -18,7 +19,9 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^5.0.1",
-    "reselect": "^4.1.6"
+    "reselect": "^4.1.6",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^13.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@capacitor/assets": "^2.0.4",
     "@ionic/cli": "6.20.1"
   },
   "description": "An Ionic project"
