--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@ionic/react": "^6.2.4",
     "@ionic/react-router": "^6.2.4",
     "animate.css": "^4.1.1",
+    "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "ionicons": "^5.4.0",
     "pullstate": "^1.24.0",
     "react": "^18.2.0",
@@ -22,7 +24,8 @@
     "reselect": "^4.1.6",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^13.3.2",
-    "swiper": "^10.2.0"
+    "swiper": "^10.2.0",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
