--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@capacitor/splash-screen": "^5.0.6",
     "@ionic/react": "^6.2.4",
     "@ionic/react-router": "^6.2.4",
+    "@reduxjs/toolkit": "^2.0.1",
     "animate.css": "^4.1.1",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-otp-input": "^3.1.0",
+    "react-redux": "^9.0.4",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^5.0.1",
