--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@capacitor/android": "^5.4.0",
+    "@capacitor/android": "5.5.1",
     "@capacitor/core": "^5.4.0",
-    "@capacitor/ios": "^4.8.1",
+    "@capacitor/ios": "^5.4.0",
     "@capacitor/splash-screen": "^5.0.6",
     "@ionic/react": "^6.2.4",
     "@ionic/react-router": "^6.2.4",
