--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor/android": "5.5.1",
     "@capacitor/core": "^5.4.0",
     "@capacitor/ios": "^5.4.0",
