--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-otp-input": "^3.1.0",
+    "react-razorpay": "^2.0.1",
     "react-redux": "^9.0.4",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "reselect": "^4.1.6",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^13.3.2",
