--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^5.1.7",
+    "react-tagsinput": "^3.20.3",
     "reselect": "^4.1.6",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^13.3.2",
