--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   "devDependencies": {
     "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "^5.4.0",
-    "@ionic/cli": "6.20.1"
+    "@ionic/cli": "6.20.1",
+    "@types/react-router-dom": "^5.3.3"
   },
   "description": "An Ionic project"
 }
